--- a/package.json
+++ b/package.json
@@ -2,10 +2,21 @@
   "name": "todo",
   "version": "0.0.1",
   "description": "An Ionic project",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "bundle": "webpack"
+  },
   "devDependencies": {
     "gulp": "^3.5.6",
     "gulp-clean-css": "^3.7.0",
     "gulp-rename": "^1.2.0",
-    "gulp-sass": "^3.1.0"
+    "gulp-sass": "^3.1.0",
+    "angular": "^1.6.9",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.4",
+    "babel-preset-env": "^1.6.1",
+    "webpack": "^4.1.1",
+    "html-webpack-plugin": "^3.0.7",
+    "webpack-cli": "^2.0.12"
   }
 }
